<resources>
    <!--    app-->
    <string name="app_name">霜降</string>
    <!--    MainActivity-->
    <!--    menu-->
    <string name="menu_about">关于</string>
    <string name="tx_search">搜索</string>
    <!--    ProjectActivity-->
    <!--    menu-->
    <string name="menu_calc">计算</string>
    <string name="menu_data">数据</string>
    <string name="menu_save">保存</string>
    <!--    output-->
    <string name="btn_copy">复制</string>
    <string name="btn_hide">隐藏</string>
    <string name="btn_fill">填充</string>

    <!--    ProcessDialog-->
    <!--    randomGenerate-->
    <string name="tx_min">最小值</string>
    <string name="tx_max">最大值</string>
    <string name="tx_count">重复次数</string>
    <!--    generateArray-->
    <string name="tx_begin">起始值</string>
    <string name="tx_step">步长</string>
    <!--    randomSampling-->
    <string name="tx_amount">样本容量</string>
    <string name="tx_chosen">抽取数量</string>
    <string name="ck_repeat">允许重复</string>
</resources>
