<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/t_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_min" />

    <EditText
        android:id="@+id/tx_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/t_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_max" />

    <EditText
        android:id="@+id/tx_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/t_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_count" />

    <EditText
        android:id="@+id/tx_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

</LinearLayout>