<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="30dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/t_begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_begin" />

    <EditText
        android:id="@+id/tx_begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/t_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_step" />

    <EditText
        android:id="@+id/tx_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/t_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tx_count" />

    <EditText
        android:id="@+id/tx_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />
</LinearLayout>